<resources>
    <string name="app_name">DeviceAppAlphaV02</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- for common !-->
    <string name="Temperature">Temperature</string>
    <string name="Humidity">Humidity</string>
    <string name="Oxygen">Oxygen</string>
    <string name="CO">CO</string>

    <string name="Temperature_KOR">온도</string>
    <string name="Humidity_KOR">습도</string>
    <string name="Oxygen_KOR">산소</string>
    <string name="CO_KOR">일산화탄소</string>


    <string name="Concentration_KOR">농도</string>


    <string name="Celsius_KOR">도</string>
    <string name="PPM_KOR">피피엠</string>
    <string name="Percent_KOR">퍼센트</string>

    <!-- for DBQuery !-->
    <string name="query_create_device_list">CREATE TABLE IF NOT EXISTS DEVICE_LIST (DEVICENAME TEXT PRIMARY KEY,  TIME TIMESTAMP DEFAULT CURRENT_TIMESTAMP);</string>
    <string name="table_name_device_list">DEVICE_LIST</string>
    <string name="query_create_data_table">(LOGNUMBER INTEGER PRIMARY KEY AUTOINCREMENT, DEVICENAME TEXT, BOARD_VER INTEGER, SNAME_1 TEXT, DATA_1 REAL, SNAME_2 TEXT, DATA_2 REAL, SNAME_3 TEXT, DATA_3 REAL, SNAME_4 TEXT, DATA_4 REAL, TIME TIMESTAMP DEFAULT (datetime("'now','localtime'")) );</string>
    <string name="query_create_data_table_bak">(LOGNUMBER INTEGER PRIMARY KEY AUTOINCREMENT, DEVICENAME TEXT, BOARD_VER INTEGER, SNAME_1 TEXT, DATA_1 REAL, SNAME_2 TEXT, DATA_2 REAL, SNAME_3 TEXT, DATA_3 REAL, SNAME_4 TEXT, DATA_4 REAL, TIME TIMESTAMP DEFAULT CURRENT_TIMESTAMP );</string>
    <string name="query_create_alert_config_table">CREATE TABLE IF NOT EXISTS ALERT_CONFIG (CONFIG TEXT)</string>
    <string name="table_name_ALERT_CONFIG">ALERT_CONFIG</string>

    <!-- for activity_detaildeviceinfo.xml !-->
    <string name="LastReceivedTime">LastReceivedTime</string>
    <string name="ConnectionStatus">ConnectionStatus</string>
    <string name="SensorCount">SensorCount</string>
    <string name="Disconnect">Disconnect</string>
    <string name="BoardVer">BoardVer</string>

    <!-- for IntentKey !-->
    <string name="ToDetailDeviceInfo">ToDetailDeviceInfo</string>
    <string name="ToChartActivity">ChartOption.list</string>

    <!-- for ServerConfigActivity !-->
    <string name="CheckServerStatus">CheckServerStatus</string>
    <string name="ServerStatus">ServerStatus</string>
    <string name="ServerConnection">ServerConnection</string>
    <string name="Check">Check</string>

    <!--for Service IntentKey!-->
    <string name="AlarmService.Key">com.android.service.AlarmService</string>
    <string name="title_activity_config">ConfigActivity</string>

    <!--for DrawItem !-->
    <string name="ConnectSensor">ConnectSensor</string>
    <string name="CheckServer">CheckServer</string>
    <string name="DeviceInfo">DeviceInfo</string>
    <string name="Stats">Stats</string>
    <string name="AlertConfig">AlertConfig</string>

    <!--for AlertConfigActivity !-->
    <string name="SoundAlert">SoundAlert</string>
    <string name="NotificationAlert">NotificationAlert</string>

    <string name="SetAlertBorder">SetAlertBorder(defaultValue)</string>


    <!--for AlertConfigData !-->
    <string name="SoundAlertEnable">SoundAlertEnable</string>
    <string name="NotificationAlertEnable">NotificationAlertEnable</string>
    <string name="TemperatureEnable">TemperatureEnable</string>
    <string name="HumidityEnable">HumidityEnable</string>
    <string name="OxygenEnable">OxygenEnable</string>
    <string name="COEnable">COEnable</string>

    <string name="CO_Level">CO_Level</string>
    <string name="Temperature_Level">Temperature_Level</string>
    <string name="Oxygen_Level">Oxygen_Level</string>
    <string name="Humidity_Level">Humidity_Level</string>

    <string name="Input_Error_Too_HIGH_String">Value is too High</string>
    <string name="Input_Error_Too_LOW_String">Value is too Low</string>
    <string name="Input_Error_Wrong_input_String">Wrong Input</string>

    <!--for DefaultData(AlertConfigData) !-->
    <string name="CO_Level_Default">30.0</string>
    <string name="Temperature_Level_Default">30.0</string>
    <string name="Oxygen_Level_Default">19.0</string>
    <string name="Humidity_Level_Default">80.0</string>
</resources>
