<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="100"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="30">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:text="@string/AlertConfig" />


            <CheckBox
                android:id="@+id/cbx_sound_alert"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/textView7"
                android:layout_marginStart="32dp"
                android:text="@string/SoundAlert" />
            <CheckBox
                android:id="@+id/cbx_notification_alert"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/cbx_sound_alert"
                android:layout_below="@+id/cbx_sound_alert"
                android:text="@string/NotificationAlert" />



        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10">

            <TextView
                android:id="@+id/textView15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"

                android:text="@string/SetAlertBorder"
                android:layout_alignParentTop="true" />

            <CheckBox
                android:text="@string/Temperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cbx_temperature"
                android:layout_alignBaseline="@+id/edt_temperature_value"
                android:layout_alignBottom="@+id/edt_temperature_value"
                android:layout_alignParentStart="true" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="5"
                android:id="@+id/edt_temperature_value"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="5"
                android:id="@+id/edt_humidity_value"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true" />

            <CheckBox
                android:text="@string/Humidity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cbx_humidity"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView10"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="5"
                android:id="@+id/edt_oxygen_value"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true" />

            <CheckBox
                android:text="@string/Oxygen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cbx_oxygen"
                android:layout_alignParentBottom="true"
                android:layout_toEndOf="@+id/textView10" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="5"
                android:id="@+id/edt_co_value"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true" />

            <CheckBox
                android:text="@string/CO"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cbx_co"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true" />
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>